chore: set `sideEffects` to false in package.json

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nitropack session",
     "session"
   ],
+  "sideEffects": false,
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
